--- a/Metodos_Cadenas_Python_Esteban.ipynb
+++ b/Metodos_Cadenas_Python_Esteban.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPYaI0zu6H3hjUhEYF/68dA",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +16,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Jhesllux/Jue_sem2_python3/blob/main/Metodos_Cadenas_Python_Esteban.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "**Métodos de análisis**"
       ],
@@ -37,11 +25,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 113,
       "metadata": {
         "id": "lH6h6GyZrrh3",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "cc68b562-50fe-4087-8465-8ed5a7454743"
       },
@@ -72,12 +61,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "OfeCwYa5vtPz",
         "outputId": "e822086d-aae5-4263-82c0-be9378412965"
       },
-      "execution_count": null,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -100,12 +90,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "BK8WoIZSxSNX",
         "outputId": "4e3d9e0d-3daa-455e-90ff-4994063e0c30"
       },
-      "execution_count": null,
+      "execution_count": 115,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -128,12 +119,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "JyJaiFYtxx2q",
         "outputId": "0c269719-f5ff-4455-da2d-89a3ffa6f65c"
       },
-      "execution_count": null,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -156,12 +148,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "ScNGHwRwyOKu",
         "outputId": "08ecf24e-bf03-4553-f018-511ed9970221"
       },
-      "execution_count": null,
+      "execution_count": 117,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -184,12 +177,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "PjNkU8AQyw-i",
         "outputId": "10e07916-62d0-42bd-de27-c0b8af9523a4"
       },
-      "execution_count": null,
+      "execution_count": 118,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,12 +206,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "yhbQjnxuzokU",
         "outputId": "f85ed674-2a66-4deb-ed1a-bad02915d0ad"
       },
-      "execution_count": null,
+      "execution_count": 119,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -239,12 +234,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "tr28n-pG1K83",
         "outputId": "91ed232a-692b-4fd8-a76e-832d5f467f94"
       },
-      "execution_count": null,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -267,12 +263,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "4Z1x6iEJ0F1B",
         "outputId": "ee9f3b27-e327-47e8-a46f-89a74392884f"
       },
-      "execution_count": null,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -295,12 +292,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "a0W7plRt1BFv",
         "outputId": "926e891a-00e8-4e0f-c909-07de93f78deb"
       },
-      "execution_count": null,
+      "execution_count": 122,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -323,12 +321,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "iKLLLfui2KH_",
         "outputId": "15123ac4-a070-4465-c3a2-15f0f084d211"
       },
-      "execution_count": null,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -351,12 +350,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "Sx2yYEkS27u-",
         "outputId": "1cf490e7-c165-45be-c5c9-044d889f919f"
       },
-      "execution_count": null,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -379,12 +379,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "PUUcngbS3GIU",
         "outputId": "6854fbd6-382b-4989-c88d-285f7c28cc80"
       },
-      "execution_count": null,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -407,12 +408,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "HLWoTnac3V_l",
         "outputId": "b8372d01-cc05-477c-ed92-9e08f682d7fc"
       },
-      "execution_count": null,
+      "execution_count": 126,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -435,12 +437,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "PQyg8ZfP3tDg",
         "outputId": "9d93c275-233f-4404-980d-a154f86b8ff5"
       },
-      "execution_count": null,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -463,12 +466,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "RRNIMrse4OWR",
         "outputId": "10b67e01-6bb3-4441-f98a-934affa956dc"
       },
-      "execution_count": null,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -506,7 +510,7 @@
         "id": "-yH3tpdg4fga",
         "outputId": "09f0c163-bd55-49b5-a552-ef460f9a452b"
       },
-      "execution_count": null,
+      "execution_count": 129,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -532,12 +536,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "vp2N5iEK5K09",
         "outputId": "5b577ea0-5073-444a-d799-3e11ded95a82"
       },
-      "execution_count": null,
+      "execution_count": 130,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -566,7 +571,7 @@
         "id": "3-FAH5io4-oX",
         "outputId": "459f3819-1449-47bb-9125-3633e865bf3b"
       },
-      "execution_count": null,
+      "execution_count": 131,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -598,7 +603,7 @@
         "id": "b0ct5YXc5_of",
         "outputId": "873e2c59-62f1-4636-cac1-43203f2b31a5"
       },
-      "execution_count": null,
+      "execution_count": 132,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -630,7 +635,7 @@
         "id": "FZKkafYk6Y24",
         "outputId": "e45ff7f4-6053-4b0f-b1aa-363f65d0551f"
       },
-      "execution_count": null,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -669,7 +674,7 @@
         "id": "Fri_rWnd7j-o",
         "outputId": "6ce565d5-01c6-493a-be53-8dacb229daf5"
       },
-      "execution_count": null,
+      "execution_count": 134,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -701,7 +706,7 @@
         "id": "GH5G9XY671Hd",
         "outputId": "29fa840c-5354-40ea-e1fc-756c877dc681"
       },
-      "execution_count": null,
+      "execution_count": 135,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -733,7 +738,7 @@
         "id": "ILqWiWb68NDr",
         "outputId": "a00e4614-b231-48a7-8598-8061bf1c663d"
       },
-      "execution_count": null,
+      "execution_count": 136,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -765,7 +770,7 @@
         "id": "qhpAmSwH8eq9",
         "outputId": "eb8e5e7f-a622-4aeb-a0c8-2eecba2a08b3"
       },
-      "execution_count": null,
+      "execution_count": 137,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -797,7 +802,7 @@
         "id": "0Gc4KLMC8xor",
         "outputId": "ea9491b0-866e-4917-ca94-e315a65fe0e4"
       },
-      "execution_count": null,
+      "execution_count": 138,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -829,7 +834,7 @@
         "id": "IDKlpBRC87To",
         "outputId": "37e4c017-e5ba-4ecb-da99-96d6ddc6be2b"
       },
-      "execution_count": null,
+      "execution_count": 139,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -861,7 +866,7 @@
         "id": "UXN3aeSD9qCS",
         "outputId": "c2711718-6da4-4dd4-eea7-c2060b3b8ece"
       },
-      "execution_count": null,
+      "execution_count": 140,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -896,12 +901,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "em36cjqR_MIi",
         "outputId": "d0d71ad2-a09e-4605-c75b-172b7f9658d7"
       },
-      "execution_count": null,
+      "execution_count": 141,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -924,12 +930,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "Uv0djjlz_lN8",
         "outputId": "a4945070-8d93-4431-8ac2-42baa5c9bcea"
       },
-      "execution_count": null,
+      "execution_count": 142,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -952,12 +959,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "3u6nGSdLAtlW",
         "outputId": "c78140b7-316c-4d68-9bed-6aefdc1ef694"
       },
-      "execution_count": null,
+      "execution_count": 143,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -980,12 +988,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "DqfSEkg_BUh8",
         "outputId": "a1c14779-4227-4636-ab1e-44cec7e1a629"
       },
-      "execution_count": null,
+      "execution_count": 144,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1014,7 +1023,7 @@
         "id": "dAczWQPfCjqR",
         "outputId": "4e35ade1-864b-4135-e9bd-6754ffc263f6"
       },
-      "execution_count": null,
+      "execution_count": 145,
       "outputs": [
         {
           "output_type": "execute_result",
